Install Node/Yarn on init

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "author": "James Waples <james@cambridge-intelligence.com>",
   "private": true,
   "scripts": {
-  	"preinstall": "./install-git-hooks.sh"
+    "preinstall": "./githooks/install-git-hooks.sh"
   }
 }
